# reviews-search

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
reviews_search/: __init__.py  __main__.py  config.py  demo_data.py  indexer.py  models.py  pipeline.py  recommend.py  search.py
reviews_search/scrape/: __init__.py  browser.py  gosom_import.py  gosom_runner.py  places_api.py
reviews_search/store/: __init__.py  database.py
